# m

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
deploy/: Dockerfile  backup.sh  docker-compose.yml  magalu.md
deploy/systemd/: m-engine-api.service  m-engine-worker.service
docs/: API.md
m_engine/: README.md  __init__.py  api.py  assistant.py  cli.py  config.py  prewarm.py  store.py  tasks.py  util.py
m_engine/prompts/: asl.md  birp.md  dimensional.md  gem.md  normalize.md  soap_longitudinal.md  soap_trajetorial.md
m_engine/providers/: __init__.py  llm.py  transcription.py
m_engine/schemas/: __init__.py  asl.py  base.py  birp.py  dimensional.py  gem.py  transcription.py
m_engine/stages/: __init__.py  asl.py  birp.py  dimensional.py  gem.py  narrative.py  normalize.py  soap_longitudinal.py  soap_trajetorial.py  transcribe.py
tests/: conftest.py  test_llm_json.py  test_store.py  test_util.py
ui-swift/: Package.swift  README.md  project.yml
ui-swift/MEngine/: APIClient.swift  AppIcon.icns  AppSettings.swift  AssistantChatView.swift  AudioRecorder.swift  ContentView.swift  EditPatientView.swift  HealthOSTheme.swift  HomeView.swift  Info.plist  IngestView.swift  MEngineApp.swift  MarkdownText.swift  Models.swift  NewConsultationView.swift  NewDocumentView.swift  NewPatientView.swift  PatientsView.swift
ui-swift/MEngine/Assistant/: AssistantGlass.swift  AssistantOrb.swift  FloatingAssistantPanel.swift  MenuBarAssistant.swift
ui-swift/design/healthos/: README.md  colors_and_type.css
(+9 files in other folders)
